online-boutique/Openshift/loadgenerator/loadgenerator.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
spec:
  selector:
    matchLabels:
      app: loadgenerator
  replicas: 1
  template:
    metadata:
      labels:
        app: loadgenerator
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      restartPolicy: Always
      # initContainers:
      # - command:
      #   - /bin/sh
      #   - -exc
      #   - |
      #     echo "Init container pinging frontend: ${FRONTEND_ADDR}..."
      #     STATUSCODE=$(wget --server-response http://${FRONTEND_ADDR} 2>&1 | awk '/^  HTTP/{print $2}')
      #     if test $STATUSCODE -ne 200; then
      #         echo "Error: Could not reach frontend - Status code: ${STATUSCODE}"
      #         exit 1
      #     fi
      #   name: frontend-check
      #   securityContext:
      #     allowPrivilegeEscalation: false
      #     capabilities:
      #       drop:
      #         - ALL
      #     privileged: false
      #     readOnlyRootFilesystem: true
      #   image: busybox:latest
      #   env:
      #   - name: FRONTEND_ADDR
      #     value: "frontend:8080"
      containers:
      - name: main
        command:
        - /bin/sh
        - -exc
        - |
           locust --host="http://${FRONTEND_ADDR}" -f locustfile.py -u "${USERS:-100}"  --spawn-rate 50 --run-time 120m --autostart  2>&1
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
        image: gcr.io/google-samples/microservices-demo/loadgenerator:v0.9.0
        resources:
          requests:
            cpu: 300m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: loadgenerator
spec:
  type: ClusterIP
  selector:
    app: loadgenerator
  ports:
  - name: http
    port: 80
    targetPort: 8089
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: loadgenerator
spec:
  port:
    targetPort: 8089
  to:
    kind: Service
    name: loadgenerator
    weight: 100
  wildcardPolicy: None
